--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,7 +154,7 @@ html {
 #slider {
     margin-top: 46px;
     padding-top: 50%;
-    background: url('/assets/img/slider/chicago.jpg');
+    background: url(/assets/img/slider/chicago.jpg);
     background-position: top center;
     background-repeat: no-repeat;
     background-size: cover;
